sort.baseball.lessons.sort.baseball.NaiveBaseball.scala.error
NaiveBaseball:8: error: ')' expected but 'return' found.
  if (Math.abs(joueurbase-base)>=Math.abs(joueurDeux-base) return 0
                                                           ^